Bug 79069 - DOCX: cannot delete table with Tracking changes (before: could be deleted but made a comeback after RT)
Summary: DOCX: cannot delete table with Tracking changes (before: could be deleted but...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: interoperability, compatibilityMode14...
Keywords: filter:docx
Depends on:
Blocks: DOCX-Tables DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2014-05-22 13:38 UTC by Michael Meeks
Modified: 2021-08-24 14:57 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
test document ... (14.73 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-22 13:43 UTC, Michael Meeks
Details
my docs (154.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-06-23 13:25 UTC, AAA
Details
my docs (153.86 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-06-23 13:26 UTC, AAA
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2014-05-22 13:38:04 UTC

    
Comment 1 Michael Meeks 2014-05-22 13:43:42 UTC
Created attachment 99583 [details]
test document ...

This guy has some serious issues ...

Load in Word and also in LibreOffice - we show a two column page (for some unknown reason).

Delete between the marks and undo -> bang a different document.

Another annoyance ;-)

Turn on change-tracking; (and hide changes) delete the table as before - then export to DOCX and re-load:
  + settings for show / hide changes not serialized.
  + the deleted table re-appears but with no content ;-)

I guess these latter two are a real pain to fix but ...
Comment 2 QA Administrators 2015-06-08 14:42:48 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2015-08-02 10:56:45 UTC
Repro.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 902255645328efde34ddf62227c8278e8dd61ff0
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-30_03:52:07
Locale: en-US (fi_FI)
Comment 4 QA Administrators 2016-09-20 10:21:38 UTC Comment hidden (obsolete)
Comment 5 Aron Budea 2017-01-28 05:45:47 UTC
Still repro, 5.3.0.3 / Ubuntu 16.04.

Additionally, when the docx is opened, this is shown in the console 4 times:
E: lt_string_value: assertion `string != ((void *)0)' failed
Comment 6 Michael Meeks 2017-01-28 12:23:37 UTC
Undo issues, particularly crashers are almost always memory / lifecycle issues. As such a valgrind trace is prolly rather useful, unless it's a NULL ptr de-reference crash =) Thanks !
Comment 7 Buovjaga 2017-01-28 14:44:39 UTC
(In reply to Michael Meeks from comment #1)
> Delete between the marks and undo -> bang a different document.

I was going to do a valgrind trace, but I can't reproduce this anymore. I don't see any difference upon undo.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 63fd4c97118a943c84ba5a666cf8c9cc54b511c7
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on January 22th 2016
Comment 8 Aron Budea 2017-01-28 16:48:40 UTC
(In reply to Buovjaga from comment #7)
> I was going to do a valgrind trace, but I can't reproduce this anymore. I
> don't see any difference upon undo.

My bad, I meant the second part of the bug, when it's saved after enabling change tracking and deleting the table.
Comment 9 Buovjaga 2018-04-18 12:22:39 UTC
(In reply to Michael Meeks from comment #1)
> Turn on change-tracking; (and hide changes) delete the table as before -
> then export to DOCX and re-load:
>   + settings for show / hide changes not serialized.

Looks like this was later filed as bug 89991

I confirm the return of the tracked & deleted table.

As the undo issue is gone, tweaking summary & blocks accordingly.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: c8c74a0b4ca6f3a3619f423b6548c80c52392ae0
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on April 15th 2018

Arch Linux 64-bit
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 10 AAA 2018-06-23 13:25:21 UTC Comment hidden (off-topic)
Comment 11 AAA 2018-06-23 13:26:38 UTC Comment hidden (off-topic)
Comment 12 AAA 2018-06-23 13:32:23 UTC Comment hidden (off-topic)
Comment 13 Buovjaga 2019-03-28 08:13:39 UTC
(In reply to Buovjaga from comment #9)
> I confirm the return of the tracked & deleted table.

Still repro.

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: 9c5d33e3c9e4a680af61a9e7af8fa73d08b33834
CPU threads: 8; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 28 March 2019
Comment 14 Timur 2020-03-27 06:37:08 UTC
Previously as Buovjaga tested with 6.3+, there was "Tracking changes in a DOCX: deleted table makes a comeback after saving and reloading".
Now with 7.0+ "Tracking changes in a DOCX: cannot delete table (before: could be deleted but made a comeback after RT)"
Comment 15 Commit Notification 2021-06-03 17:11:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/896c2199d9f0a28bd405dd2d1068f5e2973cdf06

tdf#79069 DOCX: support tracked table (row) deletion

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 László Németh 2021-06-03 17:14:51 UTC
tdf#79069 DOCX: support tracked table (row) deletion

Only DOCX round-trip was supported for tracked table and
table row deletions. Now change tracking of newly
deleted tables and table rows is exported in DOCX.

Also the DOCX import is handled by Manage Changes now:
accepting the deleted ranges of a deleted row removes
also the table row, not only its text content.

Follow-up to commit 05366b8e6683363688de8708a3d88cf144c7a2bf
"tdf#60382 sw offapi: add change tracking of table/row deletion".
Comment 17 NISZ LibreOffice Team 2021-07-05 05:58:07 UTC
Verified in :
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0afa7e64d547a8f2a48402660acf5c95a468a0ab
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded