tdf#79069 DOCX: support tracked table (row) deletion

Only DOCX round-trip was supported for tracked table and
table row deletions. Now change tracking of newly
deleted tables and table rows is exported in DOCX.

Also the DOCX import is handled by Manage Changes now:
accepting the deleted ranges of a deleted row removes
also the table row, not only its text content.

Follow-up to commit 05366b8e6683363688de8708a3d88cf144c7a2bf
"tdf#60382 sw offapi: add change tracking of table/row deletion".

Change-Id: Ic02e0adbda11032acb9616c262c2fce134f6b07c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116652
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 896c2199d9f0a28bd405dd2d1068f5e2973cdf06)